Manually solve scrollbars in webkit browsers. Prepare using jScrollPane for non-webkit browsers

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -4,8 +4,28 @@ $headline-size: 1.5em;
 $banner-height: 80px;
 $corner-radius: 3px;
 
-
-
+::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+} 
+::-webkit-scrollbar-track {
+      background-color: none;
+} 
+ 
+::-webkit-scrollbar-thumb {
+      // background-color: #1A1A1A;
+      background-color: none;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border: none;
+} 
+.scrolling::-webkit-scrollbar-thumb {
+      background-color: #1A1A1A;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border: 1px solid #525252;
+} 
+ 
 html {
   overflow: hidden;
   height: 100%; 
@@ -13,8 +33,8 @@ html {
 }
 
 body {
-  	height: 100%;
-  	overflow: auto; 
+  height: 100%;
+  overflow: auto; 
 	background-color: $background-color;
 	color: $font-color;
 }
